--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
       <div class="navSideContainer col-2">
         <div class="navSide">
           <div class="logo">
-              <a href="index.html">Abel's Gallery</a>
+              <a href="index.html">Abel's Photography</a>
           </div>
           <a href="gallery.html" class="nav-link">Gallery</a>
-          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="contact.html" class="nav-link-active">Contact</a>
           <a href="about.html" class="nav-link">About</a>
           <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
             <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
@@ -47,6 +47,64 @@
 
       <div class="contactContainer col-10">
         <div class="col-12 contactContentContainer-flex">
+          <div class= "contactContent">
+            <h1>Contact Form!</h1>
+            <p> This is where you can make an appointment for a photo shoot, but please feel free to contact me before filling the form! I would love to hear about the occasion,
+              whether it be just for fun and memories or for milestones! Contanct info is on the bottom left
+              panel, look for the email and phone icons and click!
+            </p>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/testaccfrog?hide_landing_page_details=1"></div>
+            <!-- Calendly inline widget end -->
+          </div>
+            
+        </div>
+      </div>
+    </div>
+
+    <!-- Smaller devices layout-->
+    <div class="max-width-768px">  <!-- Begin Nav List-->
+      <p>   
+          <button class="btn burger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger">
+            <i class="bi bi-list"></i>
+          </button>
+      </p>
+      <div class="collapseContainer">
+          <div class="collapse collapse-horizontal" id="collapseBurger">
+            <div class="card card-body" style="width: 300px;">
+                <div class="navSide">
+                  <div class="logo">
+                      <a href="index.html">Abel's Photography</a>
+                  </div>
+                  <a href="gallery.html" class="nav-link">Gallery</a>
+                  <a href="contact.html" class="nav-link-active">Contact</a>
+                  <a href="about.html" class="nav-link">About</a>
+                  <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                      <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                      <div style="min-height: 0px; max-width: 300px;">
+                        <div class="collapse collapse-horizontal" id="iconEmail">
+                            <div class="card card-body" style="width: 200px; align-items: center;">
+                              Abelovalle45@gmail.com
+                            </div>
+                        </div>
+                      </div>
+                      <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                      <div style="min-height: 0px; max-width: 300px;">
+                      <div class="collapse collapse-horizontal" id="iconPhone">
+                        <div class="card card-body" style="width: 150px; align-items: center;">
+                            (210) 847-1786
+                        </div>
+                      </div>
+                      </div>
+                      <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
+                  </div>
+                </div>
+            </div>
+          </div>
+      </div>
+    
+      <div class="contactContainer">
+        <div class="contactContentContainer-flex">
           <div class= "contactContent">
             <h1>Contact Form!</h1>
             <p> This is where you can make an appointment for a photo shoot, but please feel free to contact me before filling the form! I would love to hear about the occasion,
