--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8">
-      <title>Abel's Gallery</title>
+      <title>Abel's Photography</title>
       
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">  
@@ -11,41 +11,179 @@
    </head>
    
    <body>
+
    
    <div class="container-fluid">
     <div class="row">
       <!--Main Nvaigation Bar--> 
       <div class="navSideContainer col-2">
-        <div class="navSide">
-          <div class="logo">
-              <a href="index.html">Abel's Gallery</a>
-          </div>
-          <a href="gallery.html" class="nav-link-active">Gallery</a>
-          <a href="contact.html" class="nav-link">Contact</a>
-          <a href="about.html" class="nav-link">About</a>
-          <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-            <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-            <div style="min-height: 0px; max-width: 300px;">
-                <div class="collapse collapse-horizontal" id="iconEmail">
-                  <div class="card card-body" style="width: 200px; align-items: center;">
-                      Abelovalle45@gmail.com
+         <div class="navSide">
+            <div class="logo">
+               <a href="index.html">Abel's Photography</a>
+            </div>
+            <a href="gallery.html" class="nav-link-active">Gallery</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="about.html" class="nav-link">About</a>
+            <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+               <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+               <div style="min-height: 0px; max-width: 300px;">
+                  <div class="collapse collapse-horizontal" id="iconEmail">
+                     <div class="card card-body" style="width: 200px; align-items: center;">
+                        Abelovalle45@gmail.com
+                     </div>
                   </div>
-                </div>
+               </div>
+               <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+               <div style="min-height: 0px; max-width: 300px;">
+               <div class="collapse collapse-horizontal" id="iconPhone">
+                  <div class="card card-body" style="width: 150px; align-items: center;">
+                     (210) 847-1786
+                  </div>
+               </div>
+               </div>
+               <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
             </div>
-            <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-            <div style="min-height: 0px; max-width: 300px;">
-              <div class="collapse collapse-horizontal" id="iconPhone">
-                <div class="card card-body" style="width: 150px; align-items: center;">
-                    (210) 847-1786
-                </div>
-              </div>
-            </div>
-             <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
-          </div>
-        </div>
+         </div>
       </div> <!-- End of Navigation Bar -->
 
-         <div class="galleryContainer col-10 ">
+      <!-- Main content area -->
+      <div class="galleryContainer col-10 ">
+         <div class="row">
+            <div class="col-4">
+               <div class="galleryImage">
+                  <img src="Portrait8_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait10_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>
+               <div class="galleryImage">
+                  <img src="Event_Band_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait2_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>
+               <div class="galleryImage">
+                  <img src="Event_Uni_Cultural_x.jpg" class="img-fluid" alt="Portrait 2">
+               </div>                    
+               <div class="galleryImage">
+                  <img src="Nature_Sunset_y.JPG" class="img-fluid" alt="Portrait 2">
+               </div>   
+               <div class="galleryImage">
+                  <img src="SPV_Campaign3_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Grad_Portrait6_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Event_Sport_Soccer_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Event_Sport_Baseball_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>  
+            </div>
+            <div class="col-4 middleColumn">
+               <div class="galleryImage">
+                  <img src="Portrait1_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>
+               <div class="galleryImage">
+                  <img src="Event_Sport_Cheer_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait3_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>
+                  <div class="galleryImage">
+                  <img src="architectural_Church_x.jpg" class="img-fluid" alt="Portrait 2">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait5_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div> 
+               <div class="galleryImage">
+                  <img src="SPV_Campaign2_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Grad_Portrait7_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>
+               <div class="galleryImage">
+                  <img src="Event_Prom_Couple_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>   
+               <div class="galleryImage">
+                  <img src="architectural_City_Chicago1_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>            
+            </div>
+            <div class="col-4">
+               <div class="galleryImage">
+                  <img src="Event_Uni_Candid1_x.JPG" class="img-fluid" alt="Portrait 2">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait11_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>
+                  <div class="galleryImage">
+                  <img src="Family_Portrait13_x.JPG" class="img-fluid" alt="Portrait 2">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait4_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>
+               <div class="galleryImage">
+                  <img src="Portrait9_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>   
+               <div class="galleryImage">
+                  <img src="SPV_Campaign1_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Macro_Food_Honey_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>   
+               <div class="galleryImage">
+                  <img src="Couple_Portrait12_y.jpg" class="img-fluid" alt="Portrait 5">
+               </div>  
+               <div class="galleryImage">
+                  <img src="Macro_Food_Strawberry_y.JPG" class="img-fluid" alt="Portrait 5">
+               </div>  
+            </div>
+         </div>
+      </div>
+
+      <!-- Smaller devices layout-->
+      <div class="max-width-768px"> <!-- Begin Nav List-->
+         <p>   
+            <button class="btn burger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger">
+               <i class="bi bi-list"></i>
+            </button>
+         </p>
+         <div class="collapseContainer">
+            <div class="collapse collapse-horizontal" id="collapseBurger">
+               <div class="card card-body" style="width: 300px;">
+                  <div class="navSide">
+                     <div class="logo">
+                        <a href="index.html">Abel's Photography</a>
+                     </div>
+                     <a href="gallery.html" class="nav-link-active">Gallery</a>
+                     <a href="contact.html" class="nav-link">Contact</a>
+                     <a href="about.html" class="nav-link">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse-horizontal" id="iconEmail">
+                              <div class="card card-body" style="width: auto; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                        <div class="collapse collapse-horizontal" id="iconPhone">
+                           <div class="card card-body" style="width: 150px; align-items: center;">
+                              (210) 847-1786
+                           </div>
+                        </div>
+                        </div>
+                        <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+   
+         <div class="galleryContainer">
             <div class="row">
                <div class="col-4">
                   <div class="galleryImage">
@@ -89,7 +227,7 @@
                   <div class="galleryImage">
                      <img src="Portrait3_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>
-                   <div class="galleryImage">
+                     <div class="galleryImage">
                      <img src="architectural_Church_x.jpg" class="img-fluid" alt="Portrait 2">
                   </div>
                   <div class="galleryImage">
@@ -115,7 +253,7 @@
                   <div class="galleryImage">
                      <img src="Portrait11_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>
-                   <div class="galleryImage">
+                     <div class="galleryImage">
                      <img src="Family_Portrait13_x.JPG" class="img-fluid" alt="Portrait 2">
                   </div>
                   <div class="galleryImage">
@@ -140,7 +278,6 @@
             </div>
          </div>
       </div>
-         
    </div>
    
          <!-- MODAL FOR ENLARED IMAGES -->
