--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8">
-      <title>Abel's Gallery</title>
+      <title>Abel's Photography</title>
 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">  
@@ -15,29 +15,26 @@
    <div class="container-fluid">
 
       <div class="homeBackground">
+         <div class="title">
+            <h1>Abel's Photography</h1>
+         </div>
          <div id="carouselExampleFade" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="4500" data-bs-pause="false">
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="homeNav">
-                     <div class="homeLogo">
-                        <a href="gallery.html">Abel's Gallery</a>
-                     </div>
+                        <a href="gallery.html">View Gallery</a>
                   </div>
                   <img src="SPV_Campaign3_y.jpg" class="featuredImages" alt="...">
                </div>
                <div class="carousel-item">
                   <div class="homeNav">
-                     <div class="homeLogo">
-                        <a href="gallery.html">Abel's Gallery</a>
-                     </div>
+                        <a href="gallery.html">View Gallery</a>
                   </div>
                   <img src="Portrait5_y.JPG" class="featuredImages" alt="...">
                </div>
                <div class="carousel-item">
                   <div class="homeNav">
-                     <div class="homeLogo">
-                        <a href="gallery.html">Abel's Gallery</a>
-                     </div>
+                        <a href="gallery.html">View Gallery</a>
                   </div>
                   <img src="Event_Sport_Soccer_y.jpg" class="featuredImages" alt="...">
                   </div>
