--- a/about.html
+++ b/about.html
@@ -68,12 +68,10 @@
       </div>
 
       <!-- Smaller devices layout-->
-      <div class="max-width-768px">  <!-- Begin Nav List-->
-         <p>   
-            <button class="btn burger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger">
-               <i class="bi bi-list"></i>
-            </button>
-         </p>
+      <!-- About Page Content -->
+      <div class="aboutContainer">
+
+         <i type="button" class="bi bi-list" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger"></i>
          <div class="collapseContainer">
             <div class="collapse collapse-horizontal" id="collapseBurger">
                <div class="card card-body" style="width: 300px;">
@@ -107,24 +105,19 @@
                </div>
             </div>
          </div>
-
-         <!-- About Page Content -->
-         <div class="aboutContentContainer">
-               <div class="aboutContent">
-               </div>   
-               <div class="profileImageContainer">
-                  <div class="aboutTextOverlay">
-                  <h1 class="Heading">Abel Ovalle</h1>
-                  <p>Hi, my name is Abel Ovalle! I'm a photographer located in the San Antonio
-                     area. I am currently a student at Texas Lutheran University pursuing a nursing
-                     degree. I have been taking pictures for about 6 years now, and I have found a
-                     deeper connection with this hobby over the years. I have been viewing life through
-                     a lens and have managed to capture such beautiful moments. I hope I can capture
-                     your moments the same way I have learned to capture mine!
-                  </p>
-                  </div>
-                  <img src="Abel_PFP_y.JPG" class="img-fluid" id="childProfileImageContainer" alt="Portrait Image">
-               </div>
+         <div class="aboutContent">
+            <div class="aboutTextOverlay">
+               <h1>About Me</h1>
+               <p>Hi, my name is Abel Ovalle! I'm a photographer located in the San Antonio
+                  area. I am currently a student at Texas Lutheran University pursuing a nursing
+                  degree. I have been taking pictures for about 6 years now, and I have found a
+                  deeper connection with this hobby over the years. I have been viewing life through
+                  a lens and have managed to capture such beautiful moments. I hope I can capture
+                  your moments the same way I have learned to capture mine!
+               </p>
+            </div>
+            <div class="image-container">
+               <img src="Abel_PFP_y.JPG" alt="Image 1" class="profileImage" data-index="0">
             </div>
          </div>
       </div>
