--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                <img src="Portrait5_y.JPG" alt="Image 2" class="roundabout-image" data-index="1">
                <img src="Event_Sport_Soccer_y.jpg" alt="Image 3" class="roundabout-image" data-index="2">
             </div>
-            <button class="btn burger" id="homeBurger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger">
-               <i class="bi bi-list"></i>
-            </button>
+            <i type="button" class="bi bi-list" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger"></i>
             <div class="collapseContainer">
                <div class="collapse collapse-horizontal" id="collapseBurger">
                   <div class="card card-body" style="width: 300px;">
