--- a/contact.html
+++ b/contact.html
@@ -63,12 +63,8 @@
     </div>
 
     <!-- Smaller devices layout-->
-    <div class="max-width-768px">  <!-- Begin Nav List-->
-      <p>   
-          <button class="btn burger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger">
-            <i class="bi bi-list"></i>
-          </button>
-      </p>
+    <div class="max-width-576px">  <!-- Begin Nav List-->
+      <i type="button" class="bi bi-list" data-bs-toggle="collapse" data-bs-target="#collapseBurger" aria-expanded="false" aria-controls="collapseBurger"></i>
       <div class="collapseContainer">
           <div class="collapse collapse-horizontal" id="collapseBurger">
             <div class="card card-body" style="width: 300px;">
